--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,8 +1,43 @@
 #contact-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
+    align-items: left;
+    /* max-height: 20vh; */
     background-color: bisque;
+    max-width: 800px;
+    min-width: 60vw;
+    border-bottom: 0.5px solid black;
+}
+
+h1 {
+    margin: 0.5rem;
+    margin-bottom: 0;
+}
+
+hr {
+    width: 100%;
+    background-color: black;
+    height: 0.5px;
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    unicode-bidi: isolate;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 0px;
+}
+
+label {
+    margin-top: 1rem;
+    margin-left: 0.5rem;
+}
+
+#contact-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0.5rem;
+    gap: 0.5rem;
 }
