--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -1,7 +1,41 @@
 #education-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #f4f4f4;  
+  align-items: flex-start;
+  /* max-height: 20vh; */
+  background-color: white;
+  width: 100%;
+  border-bottom: 0.5px solid black;
+}
+
+.education-form {
+  /* margin-top: 1rem; */
+  margin-left: 0.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.education-info {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+  gap: 0.5rem;
+}
+
+.education-info p {
+  flex: 1 1 calc (33.3% - 0.5rem);
+  margin: 0;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0;
+  box-sizing: border-box;
+}
+
+.education-button {
+  margin: 1rem;
+}
+
+.bold {
+  font-weight: bold;
 }
