--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,24 @@ body {
     padding: 0;
     background-color: #f45959;
 }
+
+
+h1 {
+    margin: 0.5rem;
+    margin-bottom: 0;
+}
+
+hr {
+    width: 100%;
+    background-color: black;
+    height: 0.5px;
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    unicode-bidi: isolate;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 0px;
+}
