--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,8 +4,9 @@
     align-items: flex-start;
     /* max-height: 20vh; */
     background-color: white;
-    max-width: 800px;
-    min-width: 60vw;
+    width: 100%;
+    /* max-width: 800px; */
+    /* min-width: 60vw; */
     border-bottom: 0.5px solid black;
 }
 
@@ -31,27 +32,6 @@
     margin-top: 0.5rem;
     margin-left: 0.5rem;
     margin-bottom: 0;
-}
-
-
-h1 {
-    margin: 0.5rem;
-    margin-bottom: 0;
-}
-
-hr {
-    width: 100%;
-    background-color: black;
-    height: 0.5px;
-    display: block;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    unicode-bidi: isolate;
-    overflow: hidden;
-    border-style: inset;
-    border-width: 0px;
 }
 
 label {
