--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,8 +5,18 @@ body {
     background-color: #f45959;
 }
 
+header {
+    font-size: 2rem;
+    font-weight: bold;
+    /* margin-bottom: 1rem; */
+    width: 100%;
+    text-align: center;
+    margin-top: 1rem;
+    border-bottom: 2px solid black;
+  }
 
 h1 {
+    text-align: left;
     margin: 0.5rem;
     margin-bottom: 0;
 }
