Component - Experience implemented for single instance. some css eg button consolidated to index.css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,3 +35,12 @@ hr {
     border-style: inset;
     border-width: 0px;
 }
+
+button {
+    margin: 1rem;
+  }
+
+  
+.bold {
+    font-weight: bold;
+}
