--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,7 +1,27 @@
 #experience-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #f45959;  
+  align-items: flex-start;
+  background-color: white;  
+  width: 100%;
+  border-bottom: 0.5px solid black;
+  border-top: 0.5px solid black;
 }
+
+.experience-form {
+  display: grid;
+  margin-left: 0.5rem;
+  margin-bottom: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto auto;
+  gap: 0.5rem;
+}
+
+.experience-form label {
+  border: 1px solid black;
+}
+
+.experience-form > :nth-child(3) {
+  grid-column: span 2; /* Make the second row span both columns */
+}
+
