Layout: center and add bottom padding to header

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,10 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f45959;
+    background-color: #d6d2d2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -12,6 +15,7 @@ header {
     width: 100%;
     text-align: center;
     margin-top: 1rem;
+    padding-bottom: 0.5rem;
     border-bottom: 2px solid black;
   }
 
