--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -25,3 +25,16 @@
   grid-column: span 2; /* Make the second row span both columns */
 }
 
+
+.experience-info {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+  gap: 0.5rem;
+}
+
+.experience-info p {
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0;
+}
