--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,8 +14,10 @@ header {
     /* margin-bottom: 1rem; */
     width: 100%;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 0rem;
+    padding-top: 1rem;
     padding-bottom: 0.5rem;
+    background-color: white;
     border-bottom: 2px solid black;
   }
 
